# sycamore-ssr-demo

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: counter.rs  index.rs  lib.rs  main.rs  nav.rs  post.rs
posts/: index.json
src/: main.rs  posts.rs
