[package]
authors = [""]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "./app" }
pulldown-cmark = "0.13.0"
rocket = "0.5.1"
sycamore = { version = "0.9.1", features = ["futures", "hydrate"] }

[workspace]
members = ["app"]
