[package]
authors = [""]
edition = "2021"
name = "app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.27"
reqwasm = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
sycamore = { version = "0.9.1", features = ["hydrate", "suspense"] }
sycamore-router = "0.9.1"
